@@ -1,2 +1,2 @@
 base:
-  font_family: Times-Roman
+  font-family: Times-Roman
